feat: more potions, potion color, recipes

--- a/src/main/resources/data/anaramus/lang/en_us.json
+++ b/src/main/resources/data/anaramus/lang/en_us.json
@@ -8,5 +8,8 @@
   "potions.anaramus.luck1": "Potion of Lesser Luck",
   "potions.anaramus.luck2": "Potion of Luck",
   "potions.anaramus.luck3": "Potion of Greater Luck",
-  "potions.anaramus.blind_exertion": "Blind Exertion"
+  "potions.anaramus.blind_exertion": "Blind Exertion",
+  "potions.anaramus.berserkers_rage": "Berserker's Rage",
+  "potions.anaramus.neptunes_wake": "Neptunes Wake",
+  "potions.anaramus.paralysis": "Potion of Paralysis"
 }
